@@ -3,6 +3,8 @@
 	* Changed parameter name in the user initialization hook
 	* Move code to inject tags into <head> into the separate function
 	* Refactored TSFE postproc hook to use smaller functions
+	* Now adding a special <meta> tag with a usergroup id to the indexed output to create a mnogosearch section for filtering
+	* Add a security measure: use URL parameter for groups only if the indexer is running
 
 2009-10-28  Dmitry Dulepov  <dmitry.dulepov@gmail.com>
 
